# ActionData-Editor

./: .gitignore  ActionData.cs  ActionData.json  EffectSpawnData.cs  JointCollData.cs  LICENSE  MoveStateData.cs  WeaponCollData.cs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/actions/: ActionEditor.tsx  ActionList.tsx  ActionToolbar.tsx  DerivationEditor.tsx
src/components/fields/: BooleanField.tsx  JsonTextArea.tsx  NumberField.tsx  SelectField.tsx  StringArrayField.tsx  TextField.tsx  TimelineRangeField.tsx
src/components/layout/: AppShell.tsx  Toolbar.tsx  ValidationPanel.tsx
src/components/timelines/: EffectSpawnDataEditor.tsx  JointCollDataEditor.tsx  MoveStateDataEditor.tsx  MoveStraightDataEditor.tsx  SchemaTimelineFields.tsx  TimelineEditor.tsx  TimelineItemEditor.tsx  TimelineList.tsx  UnknownTimelineDataEditor.tsx  WeaponCollDataEditor.tsx
src/components/ui/: button.tsx  card.tsx  checkbox.tsx  input.tsx  select.tsx  textarea.tsx
src/io/: jsonCodec.ts  tauriFileIo.ts  timelineSchemaFileIo.ts
src/lib/: utils.ts
src/models/: actionData.ts  defaults.ts  timelineTypes.ts
src/schema/: csharpTimelineSchema.ts
src/store/: editorStore.ts
src/validation/: actionDataSchemas.ts  validateActionData.ts  validationTypes.ts
